@@ -5,15 +5,23 @@ URGENT:
 | if PhotoPrint's built without libCUPS.  The application will probably have to determine
 | whether the raw flag's needed.
 
-There's a problem with using the PostScript driver immediately after the Epson driver - certain parameters
-aren't being correctly defaulted.
+Add an ImageSource_Histogram class which will pass through the image data, but record a histogram
+as it goes.
+The histogram itself will be a separate class owned by the application but passed by reference when
+the imagesource is created.
+
+Ideally will generate the histogram data while rendering a high-res preview - but
+how to handle notification of completion?
+
+| There's a problem with using the PostScript driver immediately after the Epson driver - certain parameters
+| aren't being correctly defaulted.  (Should now be fixed)
 
 Job cancellation isn't working - what's been spooled so far is still being printed.
 
 Man page is not being installed at make install time.
 
-FIX behaviour if a bad file is dropped into PhotoPrint - the currently visible image vanishes and becomes
-unselectable until you flip to another page or adjust the layout.
+| FIX behaviour if a bad file is dropped into PhotoPrint - the currently visible image vanishes and becomes
+| unselectable until you flip to another page or adjust the layout.
 
 | FIX segfault if a file with .jpg filename isn't in fact a JPEG.
 
@@ -22,8 +30,8 @@ unselectable until you flip to another page or adjust the layout.
 
 | DEADLOCK with high-res previews and Set Colour Profile dialog.
 
-On some systems the -oraw flag is being added to the print command even when
-using the Postscript driver.
+| On some systems the -oraw flag is being added to the print command even when
+| using the Postscript driver.  -  Should now be fixed.
 
 Have a segfault problem in certain circumstances - something to do with multiple pages,
 deleting images and the rendering threads?  Possibly fixed by the deadlock fix above.
